# lepticons

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  NOTICE  README.md  index.html  tailwind.config.js  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  preview.yml  publish.yml  release.yml  update-icons.yml
code_generator/: Cargo.toml
code_generator/src/: cargo.rs  compress.rs  generate_lucide.rs  generator.rs
codegen/: Cargo.toml
codegen/src/: cargo.rs  generate_lucide.rs
demo/: Cargo.toml  index.html  tailwind.config.js
demo/src/: components.rs  components_view.rs  dom_utils.rs  icons_view.rs  local_storage.rs  main.rs  menu.rs  picker_view.rs
demo/style/: input.css
docs/: STRATEGY.md  phase-1-core.md  phase-2-picker.md  phase-3-demo.md  phase-4-animations.md  phase-5-foundation.md  phase-6-picker-polish.md  phase-7-animations-v2.md  phase-8-data-extraction.md  phase-9-framework-adapters.md  rendering-modes.md
examples/ssr-axum/: Cargo.toml  README.md
examples/ssr-axum/src/: main.rs
lepticons/: Cargo.toml  README.md
lepticons-animate/: Cargo.toml  README.md
lepticons-animate/src/: css_animations.rs  draw_icon.rs  easing.rs  lib.rs
lepticons-animate/tests/: easing_test.rs
lepticons-data/: Cargo.toml  README.md
lepticons-data/src/: lib.rs  lucide_icon_data.rs  lucide_icon_impl.rs
lepticons-picker/: Cargo.toml  README.md
lepticons-picker/src/: category_filter.rs  copy.rs  download.rs  icon_grid.rs  icon_picker.rs  icon_picker_popover.rs  icon_search.rs  keyboard.rs  lib.rs  mru.rs  mru_strip.rs  theme.rs
lepticons/src/: lib.rs  lucide_icon_data.rs  lucide_icon_impl.rs
lepticons/tests/: api_test.rs
lucide_icons/: Cargo.toml
lucide_icons/src/: generated_icons.rs  lib.rs  lucide_icon_data.rs  lucide_icon_impl.rs  types.rs
src/: components.rs  icons_view.rs  lib.rs  local_storage.rs  main.rs  menu.rs  tools.rs
style/: input.css
