[workspace]
members=["lepticons", "code_generator"]
exclude=["lucide"]

[package]
name = "lucide-icons-demo"
version = "0.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
strum = "0.26"
strum_macros = "0.26"
lepticons= { path = "./lepticons", features = ["default"] }
convert_case = "0.6"
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Navigator", "Clipboard",
    "Document", "HtmlElement", "HtmlAnchorElement", "HtmlCanvasElement",
    "HtmlImageElement", "CanvasRenderingContext2d", "Blob", "BlobPropertyBag",
    "Url",
] }
chrono = { version = "0.4", features = [] }

[package.metadata.leptos]
name = "lucid-icons-demo"
version = "0.1.0"
edition = "2021"
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
