[workspace]
resolver = "2"
members = ["lepticons-data", "lepticons", "lepticons-picker", "lepticons-animate", "codegen", "demo"]
exclude = ["lucide", "examples"]

[workspace.package]
rust-version = "1.81"

[workspace.dependencies]
strum = "0.28"
strum_macros = "0.28"
convert_case = "0.11"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
