[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generator"
path = "src/generate_lucide.rs"
#path = "src/compress.rs"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
strum = "0.26"
strum_macros = "0.26"
convert_case = "0.6"
scraper = "0.18"
weezl = "0.1"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
