[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generator"
path = "src/generate_lucide.rs"
#path = "src/compress.rs"

[dependencies]
# leptos not used by the generator
strum = "0.28"
strum_macros = "0.28"
convert_case = "0.11"
regex = "1"
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
