[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generator"
path = "src/generate_lucide.rs"
#path = "src/compress.rs"

[dependencies]
# leptos not used by the generator
strum = { workspace = true }
strum_macros = { workspace = true }
convert_case = { workspace = true }
regex = "1"
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
