[package]
name = "lepticons-codegen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "lepticons-codegen"
path = "src/generate_lucide.rs"

[dependencies]
# leptos not used by the generator
strum = { workspace = true }
strum_macros = { workspace = true }
convert_case = { workspace = true }
regex = "1"
scraper = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
