[package]
name = "lucide-icons-demo"
version = "0.7.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_meta = "0.8"
leptos_router = "0.8"
lepticons = { path = "../lepticons", features = ["default"] }
lepticons-picker = { path = "../lepticons-picker" }
lepticons-animate = { path = "../lepticons-animate" }
convert_case = { workspace = true }
web-sys = { version = "0.3", features = [
    "Window", "Storage", "Navigator", "Clipboard",
    "Document", "HtmlElement", "HtmlAnchorElement", "HtmlCanvasElement",
    "HtmlImageElement", "CanvasRenderingContext2d", "Blob", "BlobPropertyBag",
    "Url", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition",
    "Performance", "History",
] }
chrono = { version = "0.4", default-features = false, features = ["wasmbind", "clock"] }

[package.metadata.leptos]
name = "lucid-icons-demo"
version = "0.1.0"
edition = "2021"
lib-profile-release = "wasm-release"
