[dependencies.convert_case]
workspace = true

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[features]
accessibility = []
account = []
animals = []
arrows = []
buildings = []
charts = []
communication = []
connectivity = []
cursors = []
default = [
    "accessibility",
    "account",
    "animals",
    "arrows",
    "buildings",
    "charts",
    "communication",
    "connectivity",
    "cursors",
    "design",
    "development",
    "devices",
    "emoji",
    "files",
    "finance",
    "food_beverage",
    "gaming",
    "home",
    "layout",
    "mail",
    "math",
    "medical",
    "multimedia",
    "nature",
    "navigation",
    "notifications",
    "people",
    "photography",
    "science",
    "seasons",
    "security",
    "shapes",
    "shopping",
    "social",
    "sports",
    "sustainability",
    "text",
    "time",
    "tools",
    "transportation",
    "travel",
    "weather",
]
design = []
development = []
devices = []
emoji = []
files = []
finance = []
food_beverage = []
gaming = []
home = []
layout = []
mail = []
math = []
medical = []
multimedia = []
nature = []
navigation = []
notifications = []
people = []
photography = []
science = []
seasons = []
security = []
shapes = []
shopping = []
social = []
sports = []
sustainability = []
text = []
time = []
tools = []
transportation = []
travel = []
weather = []

[lib]
bench = false

[package]
description = "Lucide icon data, search, and categories -- framework-agnostic core for the Lepticons toolkit."
edition = "2021"
homepage = "https://lepticons.9bits.cc"
license = "MIT"
name = "lepticons-data"
publish = false
repository = "https://github.com/eugener/lepticons"
version = "0.1.0"
