[package]
name = "lepticons-picker"
version = "0.2.1"
edition = "2021"
description = "Embeddable icon picker component for Leptos, powered by Lucide icons."
license = "MIT"
repository = "https://github.com/eugener/lepticons"
homepage = "https://lepticons.9bits.cc"
documentation = "https://docs.rs/lepticons-picker"
keywords = ["icons", "icon-picker", "lucide", "leptos", "wasm"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
leptos = "0.8"
lepticons = { version = "0.10", path = "../lepticons" }
convert_case = { workspace = true }
web-sys = { version = "0.3", features = [
    "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition",
] }

[lib]
bench = false
