[package]
name = "lepticons-picker"
version = "0.4.0"
edition = "2021"
rust-version.workspace = true
description = "Embeddable icon picker component for Leptos, powered by Lucide icons."
license = "MIT"
repository = "https://github.com/eugener/lepticons"
homepage = "https://lepticons.9bits.cc"
documentation = "https://docs.rs/lepticons-picker"
keywords = ["icons", "icon-picker", "lucide", "leptos", "wasm"]
categories = ["gui", "web-programming"]
readme = "README.md"

[dependencies]
leptos = "0.8"
lepticons = { version = "0.13", path = "../lepticons" }
convert_case = { workspace = true }
web-sys = { version = "0.3", features = [
    "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition",
    "Storage", "Clipboard", "Navigator",
    "Blob", "BlobPropertyBag", "Url",
    "HtmlAnchorElement", "HtmlCanvasElement", "HtmlImageElement",
    "CanvasRenderingContext2d",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[lib]
bench = false
