[dependencies]
convert_case = "0.11"
strum = "0.28"
strum_macros = "0.28"

[dependencies.leptos]
features = ["csr"]
version = "0.8"

[features]
accessibility = []
account = []
animals = []
arrows = []
buildings = []
charts = []
communication = []
connectivity = []
cursors = []
default = [
    "accessibility",
    "account",
    "animals",
    "arrows",
    "buildings",
    "charts",
    "communication",
    "connectivity",
    "cursors",
    "design",
    "development",
    "devices",
    "emoji",
    "files",
    "finance",
    "food_beverage",
    "gaming",
    "home",
    "layout",
    "mail",
    "math",
    "medical",
    "multimedia",
    "nature",
    "navigation",
    "notifications",
    "people",
    "photography",
    "science",
    "seasons",
    "security",
    "shapes",
    "shopping",
    "social",
    "sports",
    "sustainability",
    "text",
    "time",
    "tools",
    "transportation",
    "travel",
    "weather",
]
design = []
development = []
devices = []
emoji = []
files = []
finance = []
food_beverage = []
gaming = []
home = []
layout = []
mail = []
math = []
medical = []
multimedia = []
nature = []
navigation = []
notifications = []
people = []
photography = []
science = []
seasons = []
security = []
shapes = []
shopping = []
social = []
sports = []
sustainability = []
text = []
time = []
tools = []
transportation = []
travel = []
weather = []

[lib]
bench = false

[package]
categories = ["graphics"]
description = "A collection of 1600+ icons for use in your Rust projects."
documentation = "https://docs.rs/lepticons"
edition = "2021"
homepage = "https://lepticons.vercel.app"
keywords = [
    "icons",
    "svg",
    "leptos",
]
license = "MIT"
name = "lepticons"
readme = "README.md"
repository = "https://github.com/eugener/lepticons"
version = "0.7.0"
