[dependencies.convert_case]
workspace = true

[dependencies.leptos]
version = "0.8"

[dependencies.strum]
workspace = true

[dependencies.strum_macros]
workspace = true

[features]
accessibility = []
account = []
animals = []
arrows = []
buildings = []
charts = []
communication = []
connectivity = []
cursors = []
default = [
    "accessibility",
    "account",
    "animals",
    "arrows",
    "buildings",
    "charts",
    "communication",
    "connectivity",
    "cursors",
    "design",
    "development",
    "devices",
    "emoji",
    "files",
    "finance",
    "food_beverage",
    "gaming",
    "home",
    "layout",
    "mail",
    "math",
    "medical",
    "multimedia",
    "nature",
    "navigation",
    "notifications",
    "people",
    "photography",
    "science",
    "seasons",
    "security",
    "shapes",
    "shopping",
    "social",
    "sports",
    "sustainability",
    "text",
    "time",
    "tools",
    "transportation",
    "travel",
    "weather",
]
design = []
development = []
devices = []
emoji = []
files = []
finance = []
food_beverage = []
gaming = []
home = []
layout = []
mail = []
math = []
medical = []
multimedia = []
nature = []
navigation = []
notifications = []
people = []
photography = []
science = []
seasons = []
security = []
shapes = []
shopping = []
social = []
sports = []
sustainability = []
text = []
time = []
tools = []
transportation = []
travel = []
weather = []

[lib]
bench = false

[package]
categories = ["graphics"]
description = "Lucide icons as a Leptos component with category-based features."
documentation = "https://docs.rs/lepticons"
edition = "2021"
homepage = "https://lepticons.vercel.app"
keywords = [
    "icons",
    "svg",
    "leptos",
]
license = "MIT"
name = "lepticons"
readme = "README.md"
repository = "https://github.com/eugener/lepticons"
version = "0.9.0"
