[package]
name = "lucide_icons"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
#crate-type = ["cdylib"]
bench = false

[dependencies]
leptos = { version = "0.4.10", features = ["csr"] }

[features]
all_icons = []




